--- a/genogram.sty
+++ b/genogram.sty
@@ -12,7 +12,7 @@
 % LaTeX version 2005/12/01 or later.
 %============================================================%
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{genogram}[2019/03/22 v1.0b Package to simply draw simple genograms]
+\ProvidesPackage{genogram}[2019/04/05 v2.0 Package to simply draw simple genograms]
 
 \RequirePackage{tikz}
 
