--- a/genogram_manual.tex
+++ b/genogram_manual.tex
@@ -14,11 +14,11 @@
 \crefname{figure}{Figure}{Figures}
 \crefname{section}{Section}{Sections}
 
-\newcommand{\versionnumber}{1.0b}
+\newcommand{\versionnumber}{2.0}
 \title{The \pn\ package: simply draw simple genograms}
 \author{%
     \begin{tabular}{c}
-        Alessandro Sciarra\\ {\small in progress}\\ \texttt{v\versionnumber}
+        Alessandro Sciarra\\ {\small 05 April 2019}\\ \texttt{v\versionnumber}
     \end{tabular}
 }
 
